[package]
name = "rust_on_cart"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
once_cell = "1.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
uuid = { version = "1.7", default-features = false, features = ["v4", "rng"] }
time = { version = "0.3", default-features = false, features = ["macros"] }
